@@ -4315,7 +4315,7 @@ FlxqX_divrem_basecase(GEN x, GEN y, GEN T, ulong p, GEN *pr)
     if (lead) p1 = Flx_mul(p1, lead,p);
     tetpil=avma; gel(z,i-dy) = gerepile(av,tetpil,Flx_rem(p1,T,p));
   }
-  if (!pr) { if (lead) gunclone(lead); return z-2; }
+  if (!pr) { guncloneNULL(lead); return z-2; }
 
   rem = (GEN)avma; av = (pari_sp)new_chunk(dx+3);
   for (sx=0; ; i--)
@@ -4329,7 +4329,7 @@ FlxqX_divrem_basecase(GEN x, GEN y, GEN T, ulong p, GEN *pr)
   }
   if (pr == ONLY_DIVIDES)
   {
-    if (lead) gunclone(lead);
+    guncloneNULL(lead);
     if (sx) return gc_NULL(av0);
     set_avma((pari_sp)rem); return z-2;
   }
@@ -4346,7 +4346,7 @@ FlxqX_divrem_basecase(GEN x, GEN y, GEN T, ulong p, GEN *pr)
     tetpil=avma; gel(rem,i) = gerepile(av,tetpil, Flx_rem(p1, T, p));
   }
   rem -= 2;
-  if (lead) gunclone(lead);
+  guncloneNULL(lead);
   if (!sx) (void)FlxX_renormalize(rem, lr);
   if (pr == ONLY_REM) return gerepileupto(av0,rem);
   *pr = rem; return z-2;
