@@ -1549,7 +1549,7 @@ clonefill(GEN S, long s, long t)
   GEN T = S, dummy = cgetg(1, t_STR);
   long i;
   for (i = s+1; i <= t; i++) gel(S,i) = dummy;
-  S = gclone(S); if (isclone(T)) gunclone(T);
+  S = gclone(S); clone_unlock(T);
   return S;
 }
 
@@ -1832,8 +1832,7 @@ smallvectors(GEN q, GEN BORNE, long maxnum, FP_chk_fun *CHECK)
 
     {
       GEN Snew = clonefill(vec_lengthen(S,stockmax), s, stockmax);
-      if (isclone(S)) gunclone(S);
-      S = Snew;
+      clone_unlock(S); S = Snew;
     }
   }
 END:
