@@ -234,7 +234,7 @@ gunclone_deep(GEN x)
       if (v) killblock(v);
       break;
   }
-  if (isclone(x)) gunclone(x);
+  clone_unlock(x);
   BLOCK_SIGINT_END;
 }
 
@@ -2250,8 +2250,7 @@ obj_insert_shallow(GEN S, long K, GEN O)
   if (typ(v) != t_VEC) pari_err_TYPE("obj_insert", S);
   o = gel(v,K);
   gel(v,K) = O; /*SIGINT: before unclone(o)*/
-  if (isclone(o)) gunclone(o);
-  return gel(v,K);
+  clone_unlock(o); return gel(v,K);
 }
 
 /* Does S [last position] contain data at position K ? Return it, or NULL */
